Got LLVM working. Created a test suite using tests from CSC431 (Compiler Construction) and passed all tests successfully